Update to latest spec (#12)
